--- a/form.html
+++ b/form.html
@@ -103,7 +103,7 @@
         <label class="comment__label">
           <textarea class="comment__textarea">Опишите подробно все свои восторги</textarea>
         </label>
-        <button class="comment__button">Отправить отзыв</button>
+        <button class="comment__button btn-item">Отправить отзыв</button>
       </fieldset>
     </form>
   </main>
@@ -118,4 +118,18 @@
       <a class="realizer__icon">Htmlacademy</a>
     </p>
   </footer>
+  <div class="failur-popup">
+    <div class="failur-popup__wrapper">
+      <p class="failur-popup__title">Что-то пошло не так!</p>
+      <p class="failur-popup__text">Заполните поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="failur-popup__btn btn-item">Ок</button>
+    </div>
+  </div>
+  <div class="success-popup">
+    <div class="success-popup__wrapper">
+      <p class="success-popup__title">Ваш отзыв отправлен!</p>
+      <p class="success-popup__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+      <button class="success-popup__btn btn-item">Закрыть окно</button>
+    </div>
+  </div>
 </body>
