--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="order">
       <p class="order__title">Заинтересовались?</p>
       <p class="order__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="order__button">Найти гостиницу</a>
+      <a class="order__button btn-item">Найти гостиницу</a>
     </div>
     <div class="map">
       <img class="map__img" src="#" width="" height="" alt="Карта">
