Сделал правки в разметке

--- a/form.html
+++ b/form.html
@@ -14,9 +14,9 @@
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="#" width="100%" height="100%" alt="City of Sedona">
       </a>
-      <button class="page-header__toggle" type="button">Открыть</button>
     </div>
     <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
           <a class="main-nav__link" href="#">Главная</a>
@@ -49,7 +49,7 @@
         <div class="request__wrapper">
           <label class="request__label">
             <span class="request__name">Имя*:</span>
-            <input class="request__input name_input" type="" name="name" placeholder="Петр">
+            <input class="request__input name--input" type="text" name="name" placeholder="Петр">
           </label>
           <label class="request__label">
             <span class="request__name">Фамилия*:</span>
@@ -110,12 +110,12 @@
   <footer class="page-footer">
     <p class="page-footer__hashtag">#VisitSedona</p>
     <div class="social">
-      <a class="social__item social_twitter" href="">Twitter</a>
-      <a class="social__item social_facebook" href="">Facebook</a>
-      <a class="social__item social_youtube" href="">Youtube</a>
+      <a class="social__item social--twitter" href="">Twitter</a>
+      <a class="social__item social--facebook" href="">Facebook</a>
+      <a class="social__item social--youtube" href="">Youtube</a>
     </div>
     <p class="realizer">Разработано
-      <a class="realizer__icon">Htmlacademy</a>
+      <a class="realizer__icon" href="https://htmlacademy.ru/intensive/adaptive">Htmlacademy</a>
     </p>
   </footer>
   <div class="failur-popup">
