--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="order">
       <p class="order__title">Заинтересовались?</p>
       <p class="order__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="order__button btn-item">Найти гостиницу</a>
+      <a class="order__button btn-item" href="#">Найти гостиницу</a>
     </div>
     <div class="map">
       <img class="map__img" src="#" width="" height="" alt="Карта">
@@ -107,12 +107,12 @@
   <footer class="page-footer">
     <p class="page-footer__hashtag">#VisitSedona</p>
     <div class="social">
-      <a class="social__item social_twitter" href="">Twitter</a>
-      <a class="social__item social_facebook" href="">Facebook</a>
-      <a class="social__item social_youtube" href="">Youtube</a>
+      <a class="social__item social--twitter" href="">Twitter</a>
+      <a class="social__item social--facebook" href="">Facebook</a>
+      <a class="social__item social--youtube" href="">Youtube</a>
     </div>
     <p class="realizer">Разработано
-      <a class="realizer__icon">Htmlacademy</a>
+      <a class="realizer__icon" href="https://htmlacademy.ru/intensive/adaptive">Htmlacademy</a>
     </p>
   </footer>
 </body>
