--- a/photo.html
+++ b/photo.html
@@ -14,9 +14,9 @@
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="#" width="100%" height="100%" alt="City of Sedona">
       </a>
-      <button class="page-header__toggle" type="button">Открыть</button>
     </div>
     <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
           <a class="main-nav__link" href="#">Главная</a>
@@ -34,24 +34,25 @@
     </nav>
   </header>
   <main class="gallery">
-    <div class="title-content">
+    <section class="title-content">
       <p class="visually-hidden">Sedona</p>
       <img class="title-content__image" src="#" width="320" height="389" alt="Вид на горы">
-    </div>
-    <div class="media-post">
+    </section>
+    <section class="media-post">
       <h1 class="media-post__title">Фото и видео</h1>
       <p class="media-post__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-    </div>
-    <div class="photo">
+    </section>
+    <section class="photo">
       <article class="photo__item">
         <a class="photo__link">
           <img class="photo__image" src="#" width="100%" height="100%" alt="">
         </a>
         <div class="photo__comment">
-          <h2 class="photo__title">Народные просторы</h2>
-          <cite class="photo__author">Автор фото: Борис</cite>
-          <div class="photo__likes"></div>
+          <h2 class="photo__title">Неродные просторы</h2>
+          <p class="photo__author">Автор фото: <cite class="photo__author-name">Борис</cite></p>
+          <a class="photo__likes">
           <span class="photo__index">1350</span>
+          </a>
         </div>
       </article>
       <article class="photo__item">
@@ -60,9 +61,10 @@
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Местная растительность</h2>
-          <cite class="photo__author">Автор фото: Сергей</cite>
-          <div class="photo__likes"></div>
+          <p class="photo__author">Автор фото: <cite class="photo__author-name">Сергей</cite></p>
+          <a class="photo__likes">
           <span class="photo__index">143</span>
+          </a>
         </div>
       </article>
       <article class="photo__item">
@@ -71,9 +73,10 @@
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Дорога на север</h2>
-          <cite class="photo__author">Автор фото: Петр</cite>
-          <div class="photo__likes"></div>
+          <p class="photo__author">Автор фото: <cite class="photo__author-name">Петр</cite></p>
+          <a class="photo__likes">
           <span class="photo__index">96</span>
+          </a>
         </div>
       </article>
       <article class="photo__item">
@@ -82,30 +85,41 @@
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Мост Дьявола</h2>
-          <cite class="photo__author">Автор фото: Антон</cite>
-          <div class="photo__likes"></div>
+          <p class="photo__author">Автор фото: <cite class="photo__author-name">Антон</cite></p>
+          <a class="photo__likes">
           <span class="photo__index">254</span>
+          </a>
         </div>
       </article>
-    </div>
-    <div class="note">
+    </section>
+    <section class="note">
       <p class="note__title">Вы еще сомневаетесь?</p>
       <p class="note__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <video controls class="note__video">
-        <source src="" type="video/mp4">
-        <source src="" type="video/oggS">
-      </video>
-    </div>
+      <div controls class="note__video">
+        <img class="note__img" width="320" height="200">
+        <div class="note__wrapper">
+        <div class="note__player">
+          <div class="note__player-scale"></div>
+          <div class="note__player-toggle"></div>
+        </div>
+        <div class="note__controls">
+          <button class="note__controls-replay"></button>
+          <button class="note__controls-subs"></button>
+          <button class="note__controls-size"></button>
+        </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <p class="page-footer__hashtag">#VisitSedona</p>
     <div class="social">
-      <a class="social__item social_twitter" href="">Twitter</a>
-      <a class="social__item social_facebook" href="">Facebook</a>
-      <a class="social__item social_youtube" href="">Youtube</a>
+      <a class="social__item social--twitter" href="">Twitter</a>
+      <a class="social__item social--facebook" href="">Facebook</a>
+      <a class="social__item social--youtube" href="">Youtube</a>
     </div>
     <p class="realizer">Разработано
-      <a class="realizer__icon">Htmlacademy</a>
+      <a class="realizer__icon" href="https://htmlacademy.ru/intensive/adaptive">Htmlacademy</a>
     </p>
   </footer>
 </body>
