--- a/source/form.html
+++ b/source/form.html
@@ -4,30 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
 
 <body>
   <header class="page-header">
-    <div clas="page-header__item">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="100%" height="100%" alt="City of Sedona">
-      </a>
-    </div>
-    <nav class="main-nav">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="#" width="100%" height="100%" alt="City of Sedona">
+    </a>
+    <nav class="main-nav main-nav--open">
       <button class="main-nav__toggle" type="button">Открыть</button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Главная</a>
         </li>
-        <li class="site-list__item">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Фото и видео</a>
         </li>
-        <li class="site-list__item">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Форма отзыва</a>
         </li>
-        <li class="site-list__item">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Html Academy</a>
         </li>
       </ul>
@@ -36,7 +34,7 @@
   <main class="form-main">
     <div class="title-content">
       <p class="visually-hidden">Sedona</p>
-      <img class="title-content__image" src="#" width="320" height="389" alt="Вид на горы">
+      <img class="title-content__image" src="/img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид на горы">
     </div>
     <form class="form-list">
       <div class="review">
