--- a/source/photo.html
+++ b/source/photo.html
@@ -4,30 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
 </head>
 
 <body>
   <header class="page-header">
-    <div clas="page-header__item">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="100%" height="100%" alt="City of Sedona">
-      </a>
-    </div>
-    <nav class="main-nav">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="#" width="100%" height="100%" alt="City of Sedona">
+    </a>
+    <nav class="main-nav main-nav--open">
       <button class="main-nav__toggle" type="button">Открыть</button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Главная</a>
         </li>
-        <li class="site-list__item">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Фото и видео</a>
         </li>
-        <li class="site-list__item">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Форма отзыва</a>
         </li>
-        <li class="site-list__item">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Html Academy</a>
         </li>
       </ul>
@@ -36,7 +34,7 @@
   <main class="gallery">
     <section class="title-content">
       <p class="visually-hidden">Sedona</p>
-      <img class="title-content__image" src="#" width="320" height="389" alt="Вид на горы">
+      <img class="title-content__image" src="/img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид на горы">
     </section>
     <section class="media-post">
       <h1 class="media-post__title">Фото и видео</h1>
@@ -45,7 +43,7 @@
     <section class="photo">
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="#" width="100%" height="100%" alt="">
+          <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" width="280" height="278" alt="Закат">
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Неродные просторы</h2>
@@ -57,7 +55,7 @@
       </article>
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="#" width="100%" height="100%" alt="">
+          <img class="photo__image" src="/img/photo-cactus-mobile@1x.jpg" width="280" height="278" alt="Кактусы">
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Местная растительность</h2>
@@ -69,7 +67,7 @@
       </article>
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="#" width="100%" height="100%" alt="">
+          <img class="photo__image" src="/img/photo-roads-mobile@1x.jpg" width="280" height="278" alt="Дороги">
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Дорога на север</h2>
@@ -81,7 +79,7 @@
       </article>
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="#" width="100%" height="100%" alt="">
+          <img class="photo__image" src="/img/photo-bridge-mobile@1x.jpg" width="280" height="278" alt="Мост">
         </a>
         <div class="photo__comment">
           <h2 class="photo__title">Мост Дьявола</h2>
@@ -95,18 +93,18 @@
     <section class="note">
       <p class="note__title">Вы еще сомневаетесь?</p>
       <p class="note__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <div controls class="note__video">
-        <img class="note__img" width="320" height="200">
+      <div class="note__video">
+        <img class="note__img" src="/img/video-mobile@1x.jpg" width="320" height="200" alt="Видео">
         <div class="note__wrapper">
-        <div class="note__player">
-          <div class="note__player-scale"></div>
-          <div class="note__player-toggle"></div>
-        </div>
-        <div class="note__controls">
-          <button class="note__controls-replay"></button>
-          <button class="note__controls-subs"></button>
-          <button class="note__controls-size"></button>
-        </div>
+          <div class="note__player">
+            <div class="note__player-scale"></div>
+            <div class="note__player-toggle"></div>
+          </div>
+          <div class="note__controls">
+            <button class="note__controls-replay" type="submit">Повтор</button>
+            <button class="note__controls-subs" type="submit">Субтитры</button>
+            <button class="note__controls-size" type="submit">На весь экран</button>
+          </div>
         </div>
       </div>
     </section>
