--- a/source/index.html
+++ b/source/index.html
@@ -11,9 +11,9 @@
 <body>
   <header class="page-header">
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="#" width="" height="" alt="Sedona">
+      <img class="page-header__logo-image" src="#" width="320" height="389" alt="Sedona">
     </a>
-    <nav class="main-nav main-nav--open">
+    <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list">
         <li class="main-nav__item site-list--active">
@@ -36,7 +36,7 @@
       <p class="visually-hidden">Welcom to the gorgeous</p>
       <p class="visually-hidden">Sedona</p>
       <p class="visually-hidden">Because the Grand Canyon sucks!</p>
-      <img class="title-content__image" src="#" width="320" height="389" alt="Вид на горы">
+      <img class="title-content__image" src="/img/bg-back-mobile@1x.jpg" width="320" height="389" alt="Вид на горы">
     </div>
     <section class="promo">
       <p class="promo__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
