--- a/source/photo.html
+++ b/source/photo.html
@@ -34,7 +34,6 @@
   <main class="gallery">
     <section class="title-content">
       <p class="visually-hidden">Sedona</p>
-      <img class="title-content__image" src="/img/bg-back-mobile@1x.jpg" width="150" height="158" alt="Вид на горы">
     </section>
     <section class="media-post">
       <h1 class="media-post__title">Фото и видео</h1>
@@ -42,13 +41,15 @@
     </section>
     <section class="photo">
       <div class="photo__wrapper">
-      <article class="photo__item">
+      <article class="photo__item photo__item--full">
         <a class="photo__link photo__link--main">
           <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" width="100%" height="100%" alt="Закат">
         </a>
         <div class="photo__comment">
-          <h2 class="photo__title">Неродные просторы</h2>
-          <p class="photo__author">Автор фото: <cite class="photo__author-name">Борис</cite></p>
+          <div class="photo__comment-wrapper">
+            <h2 class="photo__title">Неродные просторы</h2>
+            <p class="photo__author">Автор фото: <cite class="photo__author-name">Борис</cite></p>
+          </div>
           <a class="photo__likes">
           <span class="photo__index">1350</span>
           </a>
@@ -59,8 +60,10 @@
           <img class="photo__image" src="/img/photo-cactus-mobile@1x.jpg" width="100%" height="100%" alt="Кактусы">
         </a>
         <div class="photo__comment">
-          <h2 class="photo__title">Местная растительность</h2>
-          <p class="photo__author">Автор фото: <cite class="photo__author-name">Сергей</cite></p>
+          <div class="photo__comment-wrapper">
+            <h2 class="photo__title">Местная растительность</h2>
+            <p class="photo__author">Автор фото: <cite class="photo__author-name">Сергей</cite></p>
+          </div>
           <a class="photo__likes">
           <span class="photo__index">143</span>
           </a>
@@ -71,8 +74,10 @@
           <img class="photo__image" src="/img/photo-roads-mobile@1x.jpg" width="100%" height="100%" alt="Дороги">
         </a>
         <div class="photo__comment">
-          <h2 class="photo__title">Дорога на север</h2>
-          <p class="photo__author">Автор фото: <cite class="photo__author-name">Петр</cite></p>
+          <div class="photo__comment-wrapper">
+            <h2 class="photo__title">Дорога на север</h2>
+            <p class="photo__author">Автор фото: <cite class="photo__author-name">Петр</cite></p>
+          </div>
           <a class="photo__likes">
           <span class="photo__index">96</span>
           </a>
@@ -83,8 +88,10 @@
           <img class="photo__image" src="/img/photo-bridge-mobile@1x.jpg" width="100%" height="100%" alt="Мост">
         </a>
         <div class="photo__comment">
-          <h2 class="photo__title">Мост Дьявола</h2>
-          <p class="photo__author">Автор фото: <cite class="photo__author-name">Антон</cite></p>
+          <div class="photo__comment-wrapper">
+            <h2 class="photo__title">Мост Дьявола</h2>
+            <p class="photo__author">Автор фото: <cite class="photo__author-name">Антон</cite></p>
+          </div>
           <a class="photo__likes">
           <span class="photo__index">254</span>
           </a>
@@ -93,21 +100,21 @@
       </div>
     </section>
     <section class="note">
-      <p class="note__title">Все еще сомневаетесь?</p>
-      <p class="note__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+      <div class="note__item">
+        <p class="note__title">Все еще сомневаетесь?</p>
+        <p class="note__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+      </div>
       <div class="note__video">
         <img class="note__img" src="/img/video-mobile@1x.jpg" width="100%" height="100%" alt="Видео">
         <div class="note__wrapper">
           <div class="note__player">
             <div class="note__player-scale"></div>
-            <div class="note__player-toggle"></div>
+            <button class="note__player-toggle" type="button">Ползунок для видео плеера</button>
           </div>
-          <div class="note__controls">
-            <button class="note__controls-replay" type="submit">Повтор</button>
-            <div class="note__controls-wrapper">
-              <button class="note__controls-subs" type="submit">Субтитры</button>
-              <button class="note__controls-size" type="submit">На весь экран</button>
-            </div>
+          <button class="note__controls-replay" type="button">Повтор</button>
+          <div class="note__controls-wrapper">
+            <button class="note__controls-subs" type="button">Субтитры</button>
+            <button class="note__controls-size" type="button">На весь экран</button>
           </div>
         </div>
       </div>
