--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <a class="page-header__logo">
       <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="108" height="84" alt="Логотип">
     </a>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--opened mai-nav--closed">
       <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list">
         <li class="main-nav__item site-list--active">
@@ -32,11 +32,10 @@
     </nav>
   </header>
   <main class="main-index">
-    <div class="title-content">
+    <div class="title-content title-content--size">
       <p class="visually-hidden">Welcom to the gorgeous</p>
       <p class="visually-hidden">Sedona</p>
       <p class="visually-hidden">Because the Grand Canyon sucks!</p>
-      <div class="title-content__image title-content__image--size"></div>
     </div>
     <section class="promo">
       <p class="promo__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
