Внес еще изменения в сетки

--- a/source/photo.html
+++ b/source/photo.html
@@ -42,7 +42,7 @@
     <section class="photo">
       <div class="photo__wrapper">
       <article class="photo__item photo__item--full">
-        <a class="photo__link photo__link--main">
+        <a class="photo__link">
           <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" width="100%" height="100%" alt="Закат">
         </a>
         <div class="photo__comment">
