--- a/source/form.html
+++ b/source/form.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="total-wrapper">
   <header class="page-header">
     <a class="page-header__logo">
       <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
@@ -133,5 +134,6 @@
     <div class="success-popup__item">
       <button class="success-popup__btn btn-item">Закрыть окно</button>
     </div>
+  </div>
   </div>
 </body>
