--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="total-wrapper">
   <header class="page-header">
     <a class="page-header__logo">
       <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="108" height="84" alt="Логотип">
@@ -54,17 +55,14 @@
       </section>
       <section class="attributes">
         <div class="attributes__item attributes__item--house">
-          <div class="attributes__img attributes__img--house"></div>
           <h2 class="attributes__title">Жилье</h2>
           <p class="attributes__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
-        <div class="attributes__item">
-          <div class="attributes__img attributes__img--gift"></div>
+        <div class="attributes__item attributes__item--gift">
           <h2 class="attributes__title">Сувениры</h2>
           <p class="attributes__text">Не только китайского, но и местного производства!</p>
         </div>
         <div class="attributes__item attributes__item--food">
-          <div class="attributes__img attributes__img--food"></div>
           <h2 class="attributes__title">Еда</h2>
           <p class="attributes__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
@@ -117,4 +115,5 @@
       <a class="realizer__icon" href="https://htmlacademy.ru/intensive/adaptive">Htmlacademy</a>
     </p>
   </footer>
+  </div>
 </body>
