--- a/source/photo.html
+++ b/source/photo.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="total-wrapper">
   <header class="page-header">
     <a class="page-header__logo">
       <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
@@ -131,4 +132,5 @@
       <a class="realizer__icon" href="https://htmlacademy.ru/intensive/adaptive">Htmlacademy</a>
     </p>
   </footer>
+  </div>
 </body>
