--- a/source/form.html
+++ b/source/form.html
@@ -12,9 +12,13 @@
   <div class="total-wrapper">
   <header class="page-header">
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
+      <picture>
+        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
+        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
+        <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
+      </picture>
     </a>
-    <nav class="main-nav main-nav--open">
+    <nav class="main-nav main-nav--opened main-nav--closed">
       <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
