--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,11 @@
   <div class="total-wrapper">
   <header class="page-header">
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="108" height="84" alt="Логотип">
+      <picture>
+        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="108" height="84" alt="Логотип">
+        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
+        <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
+      </picture>
     </a>
     <nav class="main-nav main-nav--opened mai-nav--closed">
       <button class="main-nav__toggle" type="button">Открыть</button>
@@ -50,7 +54,11 @@
           <p class="post__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
         <figure class="post__image">
-          <img class="post__image-city" src="/img/main-city-mobile@1x.jpg" width="320" height="260" alt="Город">
+          <picture>
+            <img class="post__image-city" src="/img/main-city-mobile@1x.jpg" srcset="/img/main-city-mobile@2x.jpg" width="320" height="260" alt="Город">
+            <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg, /img/main-city-tablet@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg, /img/main-city-desktop@2x.jpg">
+          </picture>
         </figure>
       </section>
       <section class="attributes">
@@ -74,7 +82,11 @@
           <p class="post__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
         <figure class="post__image">
-          <img class="post__image-bridge" src="/img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Мост">
+          <picture>
+            <img class="post__image-bridge" src="/img/main-bridge-mobile@1x.jpg" srcset="/img/main-bridge-mobile@2x.jpg" width="100%" height="100%" alt="Мост">
+            <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg, /img/main-bridge-tablet@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg, /img/main-bridge-desktop@2x.jpg">
+          </picture>
         </figure>
       </section>
       <section class="advantages">
@@ -101,7 +113,11 @@
       <a class="order__button btn-item" href="#">Найти гостиницу</a>
     </div>
     <div class="map">
-      <img class="map__img" src="/img/bg-map-mobile@1x.jpg" width="320" height="350" alt="Карта">
+      <picture>
+        <img class="map__img" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg" width="320" height="350" alt="Карта">
+        <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg, /img/bg-map-tablet@2x.jpg">
+        <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg, /img/bg-map-desktop@2x.jpg">
+      </picture>
     </div>
   </main>
   <footer class="page-footer">
