--- a/source/photo.html
+++ b/source/photo.html
@@ -12,9 +12,13 @@
   <div class="total-wrapper">
   <header class="page-header">
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
+      <picture>
+        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
+        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
+        <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
+      </picture>
     </a>
-    <nav class="main-nav main-nav--open">
+    <nav class="main-nav main-nav--opened main-nav--closed">
       <button class="main-nav__toggle" type="button">Открыть</button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
@@ -44,7 +48,11 @@
       <div class="photo__wrapper">
       <article class="photo__item photo__item--full">
         <a class="photo__link">
-          <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" width="100%" height="100%" alt="Закат">
+          <picture>
+            <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" srcset="/img/photo-sunset-mobile@2x.jpg" width="100%" height="100%" alt="Закат">
+            <source media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.jpg, /img/photo-sunset-tablet@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.jpg, /img/photo-sunset-desktop@2x.jpg">
+          </picture>
         </a>
         <div class="photo__comment">
           <div class="photo__comment-wrapper">
@@ -58,7 +66,11 @@
       </article>
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="/img/photo-cactus-mobile@1x.jpg" width="100%" height="100%" alt="Кактусы">
+          <picture>
+            <img class="photo__image" src="/img/photo-cactus-mobile@1x.jpg" srcset="/img/photo-cactus-mobile@2x.jpg" width="100%" height="100%" alt="Кактусы">
+            <source media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.jpg, /img/photo-cactus-tablet@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.jpg, /img/photo-cactus-desktop@2x.jpg">
+          </picture>
         </a>
         <div class="photo__comment">
           <div class="photo__comment-wrapper">
@@ -72,7 +84,11 @@
       </article>
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="/img/photo-roads-mobile@1x.jpg" width="100%" height="100%" alt="Дороги">
+          <picture>
+            <img class="photo__image" src="/img/photo-roads-mobile@1x.jpg" srcset="/img/photo-roads-mobile@2x.jpg" width="100%" height="100%" alt="Дороги">
+            <source media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.jpg, /img/photo-roads-tablet@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.jpg, /img/photo-roads-desktop@2x.jpg">
+          </picture>
         </a>
         <div class="photo__comment">
           <div class="photo__comment-wrapper">
@@ -86,7 +102,11 @@
       </article>
       <article class="photo__item">
         <a class="photo__link">
-          <img class="photo__image" src="/img/photo-bridge-mobile@1x.jpg" width="100%" height="100%" alt="Мост">
+          <picture>
+            <img class="photo__image" src="/img/photo-bridge-mobile@1x.jpg" srcset="/img/photo-bridge-mobile@2x.jpg" width="100%" height="100%" alt="Мост">
+            <source media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.jpg, /img/photo-bridge-tablet@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.jpg, /img/photo-bridge-desktop@2x.jpg">
+          </picture>
         </a>
         <div class="photo__comment">
           <div class="photo__comment-wrapper">
@@ -106,7 +126,9 @@
         <p class="note__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
       </div>
       <div class="note__video">
-        <img class="note__img" src="/img/video-mobile@1x.jpg" width="100%" height="100%" alt="Видео">
+        <img class="note__img" src="/img/video-mobile@1x.jpg" srcset="/img/video-mobile@2x.jpg" width="100%" height="100%" alt="Видео">
+        <source media="(min-width: 768px)" srcset="/img/video-tablet@1x.jpg, /img/video-tablet@2x.jpg">
+        <source media="(min-width: 1200px)" srcset="/img/video-desktop@1x.jpg, /img/video-desktop@2x.jpg">
         <div class="note__wrapper">
           <div class="note__player">
             <div class="note__player-scale"></div>
