--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,9 @@
   <header class="page-header">
     <a class="page-header__logo">
       <picture>
-        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="108" height="84" alt="Логотип">
-        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
         <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
+        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
+        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="108" height="84" alt="Логотип">
       </picture>
     </a>
     <nav class="main-nav main-nav--opened mai-nav--closed">
@@ -55,9 +55,9 @@
         </div>
         <figure class="post__image">
           <picture>
-            <img class="post__image-city" src="/img/main-city-mobile@1x.jpg" srcset="/img/main-city-mobile@2x.jpg" width="320" height="260" alt="Город">
-            <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg, /img/main-city-tablet@2x.jpg">
-            <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg, /img/main-city-desktop@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg, /img/main-city-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg, /img/main-city-tablet@2x.jpg 2x">
+            <img class="post__image-city" src="/img/main-city-mobile@1x.jpg" srcset="/img/main-city-mobile@2x.jpg 2x" width="320" height="260" alt="Город">
           </picture>
         </figure>
       </section>
@@ -83,9 +83,9 @@
         </div>
         <figure class="post__image">
           <picture>
-            <img class="post__image-bridge" src="/img/main-bridge-mobile@1x.jpg" srcset="/img/main-bridge-mobile@2x.jpg" width="100%" height="100%" alt="Мост">
-            <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg, /img/main-bridge-tablet@2x.jpg">
-            <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg, /img/main-bridge-desktop@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg, /img/main-bridge-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg, /img/main-bridge-tablet@2x.jpg 2x">
+            <img class="post__image-bridge" src="/img/main-bridge-mobile@1x.jpg" srcset="/img/main-bridge-mobile@2x.jpg 2x" width="100%" height="100%" alt="Мост">
           </picture>
         </figure>
       </section>
@@ -114,9 +114,11 @@
     </div>
     <div class="map">
       <picture>
-        <img class="map__img" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg" width="320" height="350" alt="Карта">
-        <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg, /img/bg-map-tablet@2x.jpg">
-        <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg, /img/bg-map-desktop@2x.jpg">
+        <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg, /img/bg-map-desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg, /img/bg-map-tablet@2x.jpg 2x">
+        <img class="map__img" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта">
+
+
       </picture>
     </div>
   </main>
