--- a/source/photo.html
+++ b/source/photo.html
@@ -13,9 +13,9 @@
   <header class="page-header">
     <a class="page-header__logo">
       <picture>
-        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
-        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
         <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
+        <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
+        <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="100%" height="100%" alt="Логотип">
       </picture>
     </a>
     <nav class="main-nav main-nav--opened main-nav--closed">
@@ -37,7 +37,7 @@
     </nav>
   </header>
   <main class="gallery">
-    <section class="title-content">
+    <section class="title-content title-content--width">
       <p class="visually-hidden">Sedona</p>
     </section>
     <section class="media-post">
@@ -49,9 +49,9 @@
       <article class="photo__item photo__item--full">
         <a class="photo__link">
           <picture>
-            <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" srcset="/img/photo-sunset-mobile@2x.jpg" width="100%" height="100%" alt="Закат">
-            <source media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.jpg, /img/photo-sunset-tablet@2x.jpg">
-            <source media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.jpg, /img/photo-sunset-desktop@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.jpg, /img/photo-sunset-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.jpg, /img/photo-sunset-tablet@2x.jpg 2x">
+            <img class="photo__image" src="/img/photo-sunset-mobile@1x.jpg" srcset="/img/photo-sunset-mobile@2x.jpg 2x" width="100%" height="100%" alt="Закат">
           </picture>
         </a>
         <div class="photo__comment">
@@ -67,9 +67,9 @@
       <article class="photo__item">
         <a class="photo__link">
           <picture>
-            <img class="photo__image" src="/img/photo-cactus-mobile@1x.jpg" srcset="/img/photo-cactus-mobile@2x.jpg" width="100%" height="100%" alt="Кактусы">
-            <source media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.jpg, /img/photo-cactus-tablet@2x.jpg">
-            <source media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.jpg, /img/photo-cactus-desktop@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.jpg, /img/photo-cactus-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.jpg, /img/photo-cactus-tablet@2x.jpg 2x">
+            <img class="photo__image" src="/img/photo-cactus-mobile@1x.jpg" srcset="/img/photo-cactus-mobile@2x.jpg 2x" width="100%" height="100%" alt="Кактусы">
           </picture>
         </a>
         <div class="photo__comment">
@@ -85,9 +85,9 @@
       <article class="photo__item">
         <a class="photo__link">
           <picture>
-            <img class="photo__image" src="/img/photo-roads-mobile@1x.jpg" srcset="/img/photo-roads-mobile@2x.jpg" width="100%" height="100%" alt="Дороги">
-            <source media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.jpg, /img/photo-roads-tablet@2x.jpg">
-            <source media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.jpg, /img/photo-roads-desktop@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.jpg, /img/photo-roads-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.jpg, /img/photo-roads-tablet@2x.jpg 2x">
+            <img class="photo__image" src="/img/photo-roads-mobile@1x.jpg" srcset="/img/photo-roads-mobile@2x.jpg 2x" width="100%" height="100%" alt="Дороги">
           </picture>
         </a>
         <div class="photo__comment">
@@ -103,9 +103,9 @@
       <article class="photo__item">
         <a class="photo__link">
           <picture>
-            <img class="photo__image" src="/img/photo-bridge-mobile@1x.jpg" srcset="/img/photo-bridge-mobile@2x.jpg" width="100%" height="100%" alt="Мост">
-            <source media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.jpg, /img/photo-bridge-tablet@2x.jpg">
-            <source media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.jpg, /img/photo-bridge-desktop@2x.jpg">
+            <source media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.jpg, /img/photo-bridge-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.jpg, /img/photo-bridge-tablet@2x.jpg 2x">
+            <img class="photo__image" src="/img/photo-bridge-mobile@1x.jpg" srcset="/img/photo-bridge-mobile@2x.jpg 2x" width="100%" height="100%" alt="Мост">
           </picture>
         </a>
         <div class="photo__comment">
@@ -126,9 +126,9 @@
         <p class="note__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
       </div>
       <div class="note__video">
-        <img class="note__img" src="/img/video-mobile@1x.jpg" srcset="/img/video-mobile@2x.jpg" width="100%" height="100%" alt="Видео">
-        <source media="(min-width: 768px)" srcset="/img/video-tablet@1x.jpg, /img/video-tablet@2x.jpg">
-        <source media="(min-width: 1200px)" srcset="/img/video-desktop@1x.jpg, /img/video-desktop@2x.jpg">
+        <source media="(min-width: 1200px)" srcset="/img/video-desktop@1x.jpg, /img/video-desktop@2x.jpg 2x">
+        <source media="(min-width: 768px)" srcset="/img/video-tablet@1x.jpg, /img/video-tablet@2x.jpg 2x">
+        <img class="note__img" src="/img/video-mobile@1x.jpg" srcset="/img/video-mobile@2x.jpg 2x" width="100%" height="100%" alt="Видео">
         <div class="note__wrapper">
           <div class="note__player">
             <div class="note__player-scale"></div>
